--- a/templates/Index.html
+++ b/templates/Index.html
@@ -57,6 +57,9 @@
     <!-- Footer Section -->
     <footer>
         <p>&copy; 2024 Crop Recommendation System | All Rights Reserved</p>
+        <br> by  adityananaware2@gmail.com
+        <br> +91 8637750478
+        <br>  DBatu, Comp Engg, 2130331245041
     </footer>
 </body>
 </html>
